--- a/distribution/ReleaseNotes.txt
+++ b/distribution/ReleaseNotes.txt
@@ -1,8 +1,11 @@
 Release Notes
 
 HEAD, planned as v0.31
+- Added a run command to the cli to run circuit headless
 - Main open dialog is able to open FSM and Truth Tables
 - FSM editor highlights the current transition
+- Adds drivers with inverted output
+- Adds a minified circuit as a new shape for embedded circuits
 
 v0.30, released on 3. February 2023
 - Added a search function
