--- a/src/main/resources/lang/lang_de.xml
+++ b/src/main/resources/lang/lang_de.xml
@@ -1585,6 +1585,7 @@ Sind evtl. die Namen der Variablen nicht eindeutig?</string>
     <string name="key_shapeType_DIL">DIL-Gehäuse</string>
     <string name="key_shapeType_LAYOUT">Layout</string>
     <string name="key_shapeType_CUSTOM">Benutzerdefiniert</string>
+    <string name="key_shapeType_MINIMIZED">verkleinerte Schaltung</string>
 
     <string name="key_textOrientation">Ausrichtung</string>
     <string name="key_textOrientation_tt">Lage der Koordinate relativ zum Text.</string>
@@ -1811,6 +1812,11 @@ Sind evtl. die Namen der Variablen nicht eindeutig?</string>
         Wenn diese Option fehlt, erfolgt eine Ausgabe auf die Konsole.
     </string>
     <string name="cli_errorCreatingStats">Fehler bei der Erzeugung der CSV Datei!</string>
+
+    <string name="cli_run_noClock">Kein aktivierter Takt in der Schaltung gefunden!</string>
+    <string name="cli_errorRunningCircuit">Fehler beim Starten der Schaltung!</string>
+    <string name="cli_help_run">Start eine Schaltung headless.</string>
+    <string name="cli_help_run_dig">Der Dateiname der Schaltung.</string>
 
     <string name="menu_window">Fenster</string>
     <string name="menu_about">Über Digital</string>
